# kitchen-rush

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  meta.toml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
baselines/: null_agent.py  oracle_agent.py  random_agent.py
calibration/cal-2026-07-10/: calibration.json
docs/: CALIBRATED_SPEED.md  CALIBRATION.md  CONTAMINATION.md  DESIGN.md  FILE_TREE.txt  INTERFACE.md  KR_INT.md  LAUNCH_CHECKLIST.md  LIMITATIONS.md  METHODOLOGY.md  MIGRATION.md  MOVEMENT.md  MULTI_AGENT.md  OBJECTIONS.md  PROCEDURAL.md  ROADMAP.md  RULES.md  SCORING.md  SUBMISSIONS.md
leaderboard/: README.md  leaderboard.json  manifest.json  submission.schema.json
leaderboard/examples/: example_standard.json
leaderboard/results/: board.json  board.md  calibrated_board.json  calibrated_board.md  krint_gpt55-low.json  starter.json  starter.md
scripts/: build_board.py  build_calibrated_board.py  calibrate.py  kr_int_run.py  plot_board.py  plot_efficiency.py  plot_pareto.py  qa_board.py  render_board.py  render_clip.mjs  run_board.py  sweep.py
src/kitchenrush/: __init__.py  adapter.py  agent.py  baselines.py  cli.py  config.py  engine.py  kr_int.py  latency.py  metrics.py  oracle.py  procgen.py  report.py  runner.py  scoring.py  tokenizer.py  tools.py  version.py
src/kitchenrush/adapters/: __init__.py  anthropic.py  base.py  gemini.py  litellm.py  openai_compatible.py  registry.py  tokenizer.py
src/kitchenrush/config/: __init__.py  constants.py  defaults.py
src/kitchenrush/engine/: __init__.py  clock.py  cooking.py  engine.py  events.py  grid.py  recipes.py  scoring.py  state.py
src/kitchenrush/harness/: __init__.py  agent.py  conversation.py  runner.py
src/kitchenrush/leaderboard/: __init__.py  build.py  manifest.py  validate.py
src/kitchenrush/procgen/: __init__.py  generator.py  layout.py  oracle.py  orders.py  spec.py  splits.py
src/kitchenrush/report/: __init__.py  aggregate.py  schema.py  writer.py
src/kitchenrush/tools/: __init__.py  executor.py  schemas.py
tests/: test_adapters_conformance.py  test_agent.py  test_chained_calls.py  test_clock_latency.py  test_determinism.py  test_engine.py  test_grid_movement.py  test_kr_int.py  test_leaderboard_validate.py  test_metrics.py  test_oracle.py  test_procgen.py  test_recipe_feasibility.py  test_replay.py  test_scoring.py
ui/: README.md  app.js  index.html  sprites.js  styles.css
ui/assets/: generate_sprites.py  manifest.json
ui/replays/: easy_seed0_gemini35flash.json  easy_seed0_oracle.json  easy_seed1_gemini35flash.json  easy_seed1_oracle.json  easy_seed2_gemini35flash.json  medium_seed0_flashlite_b1.json  medium_seed0_gpt54mini_think_b5.json  medium_seed0_oracle_b1.json  medium_seed0_sonnet_b1.json  medium_seed0_sonnet_b5.json  medium_seed5_gpt54mini_think_b1.json  medium_seed5_sonnet_b1.json
