[project]
name = "kitchenrush"
version = "0.1.0"
description = "A benchmark for fast AND accurate native tool calling (latency costs points by construction)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Bassim Eledath" }]
keywords = [
    "benchmark",
    "tool-calling",
    "function-calling",
    "agents",
    "latency",
    "realtime",
    "llm",
    "evaluation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Phase 1 (engine + procgen + baselines + CLI) is stdlib-only — no runtime deps.
dependencies = []

[project.optional-dependencies]
# Phase 2: a single LiteLLM adapter covers OpenAI / Anthropic / Gemini / vLLM / Nemotron.
# tenacity is needed for litellm's retry path (e.g. NVIDIA NIM cold-starts).
providers = ["litellm>=1.40", "tenacity>=8.0", "tiktoken>=0.7"]
all = ["litellm>=1.40", "tenacity>=8.0", "tiktoken>=0.7"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
kitchenrush = "kitchenrush.cli:main"

[project.urls]
Homepage = "https://github.com/bassimeledath/kitchen-rush"
Repository = "https://github.com/bassimeledath/kitchen-rush"
Issues = "https://github.com/bassimeledath/kitchen-rush/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitchenrush"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
